# yolov5-opencv-cpp-python

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
config_files/: yolov5config.yaml
cpp/: yolo.cpp
